fix distorted images

--- a/themes/2025/static/css/main.css
+++ b/themes/2025/static/css/main.css
@@ -198,7 +198,7 @@ font-weight: bold;
 .Image figure {
     margin: 5pt;
 }
-.Image img {
+main .Image img {
     width: 200pt;
     height: 200pt;
 }
